--- a/TCR P3/index.HTML
+++ b/TCR P3/index.HTML
@@ -92,11 +92,13 @@ a:link, a:visited {
 
 text-decoration: none;
 display: inline-block;
+font-size: 20px;
+
 }
 .about{
     padding: 20px;
    font-size: 20px;
-   text-align: justify;
+   text-align:center;
 }
 </style>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -234,10 +236,10 @@ Ones you will have our ice cream ,you will need it everyday.<i>Yes, it's addicti
 
     </div>
 <center><footer>
-<p class="text-white footer-text text-color">
+<p>
 Copyright &copy; 2021 Soul Pickr
 . Design:
-<a href="https://www.linkedin.com/in/raj-rathaur-984604155/" class="footer-link">Soul Pickr</a> </p>
+<a href="https://www.linkedin.com/in/raj-rathaur-984604155/">Soul Pickr</a> </p>
 </footer></center>
 
   </body>
