--- a/TCR P3/index.HTML
+++ b/TCR P3/index.HTML
@@ -5,6 +5,9 @@
     <meta charset="utf-8">
     <title>MENU</title>
     <style>
+      body{
+            user-select: none;
+        }
       .card {
           box-shadow: 0 15px 8px 0 rgba(6, 90, 247, 0.2);
           max-width: 700px;
