--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
          </p>
 
         <p><button><a href="https://forms.gle/zbF6jmXwgQukYbL67" class="icon" >Register Now</a></button>
-            <br/><br/><button><a href="#" class="icon"></a>Join Meeting</a></button></div></p>
+            <br/><br/><button><a href="https://zoom.us/j/96112158838?pwd=UFh5WDA3TjhpaVZneThvYmlXSWFOUT09" class="icon"></a>Join Meeting</a></button></div></p>
         <p class="contact"><b>Contact Us</b><br/><a href="https://www.instagram.com/acm_srmgpc/" class="fa fa-instagram " ></a>
         <a href="https://mail.google.com/mail/u/0/?fs=1&to=acm.srmgpc.official@gmail.com&tf=cm" class="fa fa-envelope"></a></p>
       </div>
