Added presentation format

--- a/iic/index.html
+++ b/iic/index.html
@@ -943,7 +943,7 @@ margin-right: 250px;
 
   </center></div>
 
-  <br><br><div class="registerd"><button class="register"><a href="https://forms.gle/FLjoYSQkVEiff4KNA"> Register Now</a></button></div><br><br><br><br><center><iframe src="https://docs.google.com/forms/d/e/1FAIpQLScMQHxas1k4XipN4FtYzRFcaLQNQPnjSOCbrr66bloCdDCaVw/viewform?embedded=true" width="640" height="1800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></center><br><br><br><br>
+  <br><br><div class="registerd"><button class="register"><a href="https://docs.google.com/document/d/1WCSUp4xg5Hz3PX6rzGK6YZN0ageBN16HOioLj2-J1jQ/edit?usp=sharing"> Presentation Format</a></button></div><br><br><br><br><center><iframe src="https://docs.google.com/forms/d/e/1FAIpQLScMQHxas1k4XipN4FtYzRFcaLQNQPnjSOCbrr66bloCdDCaVw/viewform?embedded=true" width="640" height="1800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></center><br><br><br><br>
   <footer>
     <div class="content">
       <br>
