added submission link

--- a/iic/index.html
+++ b/iic/index.html
@@ -752,6 +752,7 @@ margin-right: 250px;
         <a href="#schedule">Schedule</a>
      
         <a href="#about">About Us</a>
+          <a href="https://forms.gle/kmPDtumPwARCn2ww8">Submission</a>
         <a href="https://api.whatsapp.com/send?phone=+919670164272&text=Hey! I have a doubt regarding AIM 1.0...">Contact Us</a>
       
       </nav>
