--- a/iic/index.html
+++ b/iic/index.html
@@ -888,7 +888,7 @@ margin-right: 250px;
                 </div>
                 <div class="timeline-content">
                     <div class="back-trans left">
-                        <h1>25th November, 2021</h1>
+                        <h1>27th November, 2021</h1>
                     </div>
                 </div>
                 <div class="timeline-content">
@@ -915,7 +915,7 @@ margin-right: 250px;
                 </div>
                 <div class="timeline-content">
                     <div class="back-trans right">
-                        <h1>23rd November, 2021</h1>
+                        <h1>23rd November, 2021 (extended to 26th November)</h1>
                     </div>
                 </div>
                 <div class="timeline-content">
@@ -935,7 +935,7 @@ margin-right: 250px;
                 </div>
                 <div class="timeline-content">
                     <div class="back-trans right">
-                        <h1>26th November, 2021</h1>
+                      <h1><i>To be declared soon...</i></h1>
                     </div>
                 </div>
             </div>
