--- a/muskan/index.html
+++ b/muskan/index.html
@@ -24,7 +24,7 @@
                         <li class="nav__item"><a href="#home" class="nav__link active">Home</a></li>
                         <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
                         <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
-                        <li class="nav__item"><a href="#work" class="nav__link">Work</a></li>
+<!--                         <li class="nav__item"><a href="#work" class="nav__link">Work</a></li> -->
                         <li class="nav__item"><a href="mailto:muskanarora0023@gmail.com" class="nav__link">Contact</a></li>
                     </ul>
                 </div>
